[package]
name = "toolkit"
version = "99.9.999-SNAPSHOT"
authors = ["Ethan Hall <ethankhall@pm.me>"]
edition = "2018"

[dependencies]
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
clap = { version = "2.32", features = ["yaml"] }
colored = "1.6"
chrono = "0.4"
chrono-tz = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.7"
regex = "1"
mime = "0.3"
comrak = "0.4"
json = "*"
indicatif = "0.11"
ratelimit = "0.4"
reqwest = { version = "0.9", features = ["rustls-tls"] }
crossbeam-channel = "0.3"
kopy-common-lib = { git = "https://github.com/ethankhall/rust-shared.git", rev = "84a38d080b5a066c7443e6a46e043708d2a53f39" }
prettytable-rs = "0.8"
crossterm = "0.10"
crossterm_screen = "0.2"
lazy_static = "*"
flate2 = "1.0"
atty = "0.2"
pest = "2.1.0"
pest_derive = "2.1.0"
tokio = "0.1"
itertools = "0.8"
futures = "0.1"
futures-cpupool = "0.1"